<resources>
    <string name="app_name">Pokedex</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_header_description">Navigation drawer header</string>
    <string name="pokemon_image">Pokemon image</string>
    <string name="city_placeholder">Kanto</string>
    <string name="regions">Regions</string>
    <string name="all_pokemon">All Pokemon</string>
    <string name="items">Items</string>
    <string name="settings">Settings</string>
    <string name="about">About the app</string>
    <string name="rate">Rate the app</string>
    <string name="background_charizard">Background Charizard</string>
    <string name="details">Details</string>
    <string name="details_dot">Details:</string>
    <string name="ditto_background">Ditto_background</string>
    <string name="no_name">No name</string>
    <string name="shiny">Shiny</string>
    <string name="type">Type:</string>
    <string name="description">Description</string>
    <string name="error">Error</string>
    <string name="unknown">Unknown</string>
    <string name="pokedex_id">Pokedex ID:</string>
    <string name="height">Height:</string>
    <string name="weight">Weight:</string>
    <string name="habitat">Habitat:</string>
    <string name="base_happiness">Base happiness:</string>
    <string name="capture_rate">Capture rate:</string>
    <string name="app">app</string>
    <string name="pokedexes">Pokedexes</string>
    <string name="pokedex_app">Pokedex app</string>
    <string name="about_string_1">Open source app\nall data is from\npokeapi.co</string>
    <string name="about_str">About</string>
    <string name="no_internet">No internet connection</string>
    <string name="dark_mode">Dark mode</string>
</resources>