<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/menu_topMenu"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_regions"
            android:icon="@drawable/ic_region"
            android:title="@string/regions" />
        <item
            android:id="@+id/nav_pokemonList"
            android:icon="@drawable/ic_pokemon"
            android:title="@string/all_pokemon" />
        <item
            android:id="@+id/nav_items"
            android:icon="@drawable/ic_items"
            android:title="@string/items" />
    </group>
    <group
        android:id="@+id/menu_bottomMenu"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_rate"
            android:icon="@drawable/ic_star"
            android:title="@string/rate" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info"
            android:title="@string/about" />
    </group>
</menu>