<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/nav_regions">

    <fragment
        android:id="@+id/nav_regions"
        android:name="br.com.renandeldotti.pokedex.ui.region.RegionFragment"
        android:label="@string/regions"
        tools:layout="@layout/fragment_region">
        <action
            android:id="@+id/action_open_pokemonList_from_region"
            app:destination="@id/nav_pokemonList" />
    </fragment>
    <fragment
        android:id="@+id/nav_pokemonList"
        android:name="br.com.renandeldotti.pokedex.ui.pokemonlist.PokemonListFragment"
        android:label="@string/all_pokemon"
        tools:layout="@layout/fragment_pokemon_list">
        <argument
            android:name="pokedexId"
            android:defaultValue="0"
            app:argType="string"
            app:nullable="true" />
        <argument
            android:name="pokedexName"
            android:defaultValue="All pokemon"
            app:argType="string"
            app:nullable="true" />
        <action
            android:id="@+id/action_nav_pokemonList_to_pokemonDetailFragment"
            app:destination="@id/pokemonDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_items"
        android:name="br.com.renandeldotti.pokedex.ui.items.ItemsFragment"
        android:label="@string/items"
        tools:layout="@layout/items_fragment" />
    <fragment
        android:id="@+id/pokemonDetailFragment"
        android:name="br.com.renandeldotti.pokedex.ui.pokemondetail.PokemonDetailFragment"
        android:label="@string/details"
        tools:layout="@layout/fragment_pokemon_detail" >
        <argument
            android:name="pokemonId"
            app:argType="string" />
    </fragment>
</navigation>