<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="pokemonName"
            type="String" />

        <variable
            name="pokemonId"
            type="String" />

        <variable
            name="pokemonType"
            type="String" />

        <variable
            name="textChangedColor"
            type="Integer" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:background="@color/colorBlackLight"
        tools:context=".ui.pokemondetail.PokemonDetailFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp">

                <ImageView
                    android:id="@+id/pokemon_detail_pokemonImage"
                    android:layout_width="300dp"
                    android:layout_height="0dp"
                    android:contentDescription="@string/pokemon_image"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@drawable/ditto_shiny_placeholder" />

                <TextView
                    android:id="@+id/pokemon_detail_pokemonName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@{pokemonName}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@{textChangedColor}"
                    android:textSize="32sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/pokemon_detail_pokemonImage"
                    tools:text="Pokemon Name" />

                <TextView
                    android:id="@+id/pokemon_detail_pokemonId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@{pokemonId}"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@{textChangedColor}"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@id/pokemon_detail_switchShiny_label"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/pokemon_detail_pokemonName"
                    tools:text="#001" />

                <TextView
                    android:id="@+id/pokemon_detail_switchShiny_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@string/shiny"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@{textChangedColor}"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/pokemon_detail_pokemonId"
                    app:layout_constraintTop_toTopOf="@id/pokemon_detail_pokemonId" />

                <Switch
                    android:id="@+id/pokemon_detail_switchShiny"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="@id/pokemon_detail_switchShiny_label"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.1"
                    app:layout_constraintStart_toEndOf="@id/pokemon_detail_switchShiny_label"
                    app:layout_constraintTop_toTopOf="@id/pokemon_detail_switchShiny_label" />

                <TextView
                    android:id="@+id/pokemon_detail_type_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/type"
                    android:textAlignment="viewEnd"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@{textChangedColor}"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@id/pokemon_detail_type"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/pokemon_detail_pokemonId" />

                <TextView
                    android:id="@+id/pokemon_detail_type"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="8dp"
                    android:text="@{pokemonType}"
                    android:textAlignment="viewStart"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@{textChangedColor}"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/pokemon_detail_type_label"
                    app:layout_constraintTop_toTopOf="@id/pokemon_detail_type_label"
                    tools:text="None" />

                <TextView
                    android:id="@+id/pokemon_detail_description_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/description"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@{textChangedColor}"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/pokemon_detail_type_label" />

                <TextView
                    android:id="@+id/pokemon_detail_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@{textChangedColor}"
                    app:layout_constraintTop_toBottomOf="@id/pokemon_detail_description_label"
                    tools:maxLines="15"
                    tools:text="@tools:sample/lorem/random" />

                <TextView
                    android:id="@+id/pokemon_detail_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/details"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@{textChangedColor}"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/pokemon_detail_description" />

                <TextView
                    android:id="@+id/pokemon_detail_habitat_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:paddingHorizontal="8dp"
                    android:text="@string/habitat"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@{textChangedColor}"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/pokemon_detail_details" />

                <TextView
                    android:id="@+id/pokemon_detail_habitat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@{textChangedColor}"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@id/pokemon_detail_habitat_label"
                    app:layout_constraintTop_toTopOf="@id/pokemon_detail_habitat_label"
                    tools:text="Habitat value" />

                <TextView
                    android:id="@+id/pokemon_detail_height_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:paddingHorizontal="8dp"
                    android:text="@string/height"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@{textChangedColor}"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/pokemon_detail_habitat_label" />

                <TextView
                    android:id="@+id/pokemon_detail_height"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@{textChangedColor}"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@id/pokemon_detail_height_label"
                    app:layout_constraintTop_toTopOf="@id/pokemon_detail_height_label"
                    tools:text="Height value" />

                <TextView
                    android:id="@+id/pokemon_detail_weight_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:paddingHorizontal="8dp"
                    android:text="@string/weight"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@{textChangedColor}"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/pokemon_detail_height_label" />

                <TextView
                    android:id="@+id/pokemon_detail_weight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@{textChangedColor}"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@id/pokemon_detail_weight_label"
                    app:layout_constraintTop_toTopOf="@id/pokemon_detail_weight_label"
                    tools:text="Weight value" />

                <TextView
                    android:id="@+id/pokemon_detail_happiness_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:paddingHorizontal="8dp"
                    android:text="@string/base_happiness"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@{textChangedColor}"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/pokemon_detail_weight_label" />

                <TextView
                    android:id="@+id/pokemon_detail_happiness"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@{textChangedColor}"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@id/pokemon_detail_happiness_label"
                    app:layout_constraintTop_toTopOf="@id/pokemon_detail_happiness_label"
                    tools:text="Happiness value" />

                <TextView
                    android:id="@+id/pokemon_detail_captureRate_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:paddingHorizontal="8dp"
                    android:text="@string/capture_rate"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@{textChangedColor}"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/pokemon_detail_happiness_label" />

                <TextView
                    android:id="@+id/pokemon_detail_captureRate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@{textChangedColor}"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@id/pokemon_detail_captureRate_label"
                    app:layout_constraintTop_toTopOf="@id/pokemon_detail_captureRate_label"
                    tools:text="Capture rate value" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>